<resources>
    <string name="app_name" translatable="false"> <font family="@font/shrikhand" >Scrabble</font></string>
    <string name="action_settings">Paramètres</string>
    <string name="tapez_quelque_chose">Tapez quelque chose…</string>
    <string name="game">Jeu</string>
    <string name="tournois">Tournois</string>
    <string name="jouer">Jouer</string>
    <string name="classique">Classique</string>
    <string name="collaboratif">Coop</string>
    <string name="disconnect">Déconnexion</string>
    <string name="doubleLetter">DL</string>
    <string name="tripleLetter">TL</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="doubleWord">DM</string>
    <string name="tripleWord">TM</string>
    <string name="reserve">LETTRES RESTANTES DANS LA RÉSERVE</string>
    <string name="abandonner">Abandonner</string>
    <string name="rejoindre"><![CDATA[%1$s veut rejoindre votre partie.]]></string>
    <string name="accepter">Accepter</string>
    <string name="refuser">Refuser</string>
    <string name="annuler">Annuler</string>
    <string name="ajouter">Ajouter</string>
    <string name="queueMessage">À la recherche d\'un tournoi</string>
    <string name="FriendCode">Entrez le code se trouvant sur le profil de votre ami pour l\'ajouter </string>
    <string name="friendModified"> a remplacé son nom par </string>
    <string name="friendRemoved"> n\'est plus votre ami</string>
    <string name="friendChat">Voir clavardage</string>
    <string name="friendProfile">Voir le profil</string>
    <string name="friendJoin">Inviter dans une partie</string>
    <string name="friendRemove">Retire de la liste d\'amis</string>
    <string name="changeUsername">Changement de votre nom d\'utilisateur </string>
    <string name="deleteChat">Vous vous apprêter à effacer ce chat public. Voulez vous continuer?</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="swap">Échanger</string>
    <string name="reserveText">LETTRES RESTANTES DANS LA RÉSERVE</string>
    <string name="pass">Passer</string>
    <string name="tillNextRound">JUSQU\'AU PROCHAIN TOUR</string>
    <string name="play">Jouer</string>
    <string name="first_fragment_label">Menu principal</string>
    <string name="second_fragment_label">Boîte de clavardage</string>
    <string name="next">Clavardage</string>
    <string name="previous">Précédant</string>
    <string name="reset_fragment_label">Mot de passe oublié</string>
    <string name="prompt_email">Courriel</string>
    <string name="prompt_friendcode">Code d\'ami</string>
    <string name="prompt_username"><i>Nom d\'utilisateur</i></string>
    <string name="prompt_password"><i>Mot de passe</i></string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="welcome">"Bienvenue!"</string>
    <string name="invalid_username">Pas un nom valid</string>
    <string name="invalid_email">Pas un courriel valid</string>
    <string name="invalid_password">Le mot de passe doit contenir au moins 5 caractères</string>
    <string name="invalid_question">La question ne peut être vide</string>
    <string name="invalid_answer">La réponse ne peut être vide</string>
    <string name="login_failed">"Échec de la connexion"</string>
    <string name="register_failed">"Échec de l'enregistrement"</string>
    <string name="NO_ERROR">Aucune erreur </string>
    <string name="ERROR">Erreur</string>
    <string name="WRONG_FRIEND_CODE">Le code d\'ami est incorrect</string>
    <string name="FIELD_EMPTY"> Une entrée est vide</string>
    <string name="USERNAME_INVALID">Le nom est invalide</string>
    <string name="PASSWORD_INVALID">Le mot de passe est invalide</string>
    <string name="EMAIL_INVALID">Le courriel est invalide</string>
    <string name="USERNAME_TAKEN">Le nom est déjà utilisé</string>
    <string name="DATABASE_UNAVAILABLE">La base de données est indisponible. Veuillez réessayer plus tard.</string>
    <string name="WRONG_SECURITY_ANSWER">Mauvaise réponse</string>
    <string name="ROOM_NAME_TAKEN">Le nom est déjà utilisé</string>
    <string name="ROOM_PASSWORD_INCORRECT">Le mot de passe est incorrect</string>
    <string name="JOIN_REQUEST_REFUSED">Votre demande d\'adhésion a été refusée</string>
    <string name="ROOM_IS_FULL">La salle est déjà pleine</string>
    <string name="ROOM_DELETED">La salle n\'existe plus</string>
    <string name="GAME_STARTED">La partie est déjà commencée</string>
    <string name="ReplaceLetter"><i>Tapez une lettre à remplacer.</i></string>
    <string name="MSG_1"><![CDATA[<b>%1$s</b> a placé <i>%2$s</i> pour %3$s point(s).]]></string>
    <string name="MSG_2"><![CDATA[<b>%1$s</b> a tenté de placer un mot invalide.]]></string>
    <string name="MSG_3"><![CDATA[<b>%1$s</b> a échangé %2$s lettre(s).]]></string>
    <string name="MSG_4"><![CDATA[<b>%1$s</b> a passé son tour.]]></string>
    <string name="MSG_5"><![CDATA[<b>%1$s</b> s\'est déconnecté et a été remplacé par un JV.]]></string>
    <string name="MSG_6"><![CDATA[<b>%1$s</b> a manqué de temps et a passé son tour.]]></string>
    <string name="MSG_7"><![CDATA[Fin de partie - lettres restantes <b>%1$s</b>]]></string>
    <string name="MSG_8"><![CDATA[La ronde est terminée. La prochaine partie va commencer dans 20 secondes.]]></string>
    <string name="MSG_9"><![CDATA[%1$s minute(s) avant la fin de la ronde.]]></string>
    <string name="MSG_10"><![CDATA[%1$s s\'est déconnecté.]]></string>
    <string name="MSG_11"><![CDATA[%1$s a accepté l\'action proposée.]]></string>
    <string name="MSG_12"><![CDATA[%1$s a refusé l\'action proposée.]]></string>
    <string name="MSG_13"><![CDATA[%1$s a proposé l\'action suivante pour l\'équipe : %2$s]]></string>
    <string name="MSG_14"><![CDATA[Tout le monde a accepté l\'action proposée.]]></string>
    <string name="scrabbleName">Scrabble</string>
    <string name="info_panel">PANNEAU INFORMATIF</string>
    <string name="detectedJoker">JOKER DÉTECTÉ!</string>
    <string name="blankLetterOnBoard">Une lettre blanche a été placée sur le plateau.</string>
    <string name="blankLetterWarning">Une fois choisies, les lettres ne peuvent plus être changées. Choisissez bien!</string>
    <string name="registerText">Pas de compte? Inscrivez-vous!</string>
    <string name="forgotPasswordText">Mot de passe oublié?</string>
    <string name="reset_password">Réinitialiser mot de passe</string>
    <string name="register">Inscription</string>
    <string name="fr" translatable="false">FR</string>
    <string name="en" translatable="false">EN</string>
    <string name="security_question">Question de sécurité</string>
    <string name="answer">Réponse</string>
    <string name="passwordResetProcess">Enter a username to start the password reset process.</string>
    <string name="reset">"Réinitialisation "</string>
    <string name="answerReset">Réponse</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="register_new_passsword">Enregister le nouveau mot de passe</string>
    <string name="times_up">TIME\'S UP!</string>
    <string name="talkingIntext">en train de discuter avec</string>
    <string name="manage_chats">Gérer les chats</string>
    <string name="hello_message"><![CDATA[Hello <b>%1$s</b>!]]></string>
    <string name="privateRoom">Privée</string>
    <string name="publicRoom">Publique</string>
    <string name="protectedRoom">Protégéé</string>
    <string name="join_game_text">Voulez-vous rejoindre la partie en tant qu\'observateur?</string>
    <string name="enter_the_room_password">Entrez le mot de passe</string>
    <string name="quit">Quitter</string>
    <string name="winnerName"><![CDATA[%1$s a gagné la partie!]]></string>
    <string name="waitingRoomText">Si l\'hôte décide de lancer la partie et qu\'il y a au minimum 2 joueurs , les places restantes seront comblées par des Joueurs Virtuels.</string>
    <string name="create_a_room">Créer une salle</string>
    <string name="enter_a_room_name"><i>Nom de la salle</i></string>
    <string name="enter_a_chat_name"><i>Entrez le nom du chat</i></string>
    <string name="search_a_chat_name"><i>Rechercher un chat</i></string>
    <string name="needHelp">BESOIN D\'AIDE?</string>
    <string name="voici_quelques_indices_pour_vous_aider">Voici quelques indices pour vous aider.</string>
    <string name="vous_pouvez_cliquer_sur_n_importe_lequel_pour_le_pr_visualiser_sur_le_plateau">Vous pouvez cliquer sur n\'importe lequel pour le prévisualiser sur le plateau.</string>
    <string name="yes">oui, je quitte</string>
    <string name="no">non, je reste</string>
    <string name="confirmAbandon">Êtes vous suuuur(e)?</string>
    <string name="confirmButtonText">Êtes-vous sûr(e) de vouloir quitter la partie?</string>
    <string name="now_observing_player1"><![CDATA[EN TRAIN D\'OBSERVER %1$s]]></string>
    <string name="move_mode">mode placer</string>
    <string name="swap_mode">mode échanger</string>
    <string name="indice">Indice</string>
    <string name="xp_needed_till_next_level_00"><![CDATA[xp nécessaires pour le prochain niveau - %1$s]]></string>
    <string name="lvl">niv</string>
    <string name="iswinner">gagné</string>
    <string name="isloser">perdu</string>
    <string name="your_friend_code_is">votre code ami est</string>
    <string name="avatarError">Veuillez choisir un avatar</string>
    <string name="language">langage</string>
    <string name="current_theme">thème actuel</string>
    <string name="vous_pourrez_le_changer_nouveau_dans_votre_page_de_profil">Vous pourrez le changer à nouveau dans votre page de profil.</string>
    <string name="choisissez_votre_avatar">choisissez votre avatar</string>
    <string name="revenez_quand_vous_aurez_fait_des_parties">Revenez quand vous aurez fait des parties!</string>
    <string name="c_est_vide_ici">c\'est vide ici…</string>
    <string name="host">Hôte</string>
    <string name="numberPlayers" translatable="false"><![CDATA[%1$s / 4]]></string>
    <string name="congrats_to_all_players">félicitations à tous les joueurs!</string>
    <string name="tournament_ranking">classement du tournoi</string>
    <string name="pas_besoin_d_indices">PAS BESOIN D\'INDICES</string>
    <string name="joined_public_chats">chats publics rejoints</string>
    <string name="pss_you_can_quit_any_room_by_clicking_it">(pss…tu peux quitter un chat ou effacer un chat que tu as créé en cliquant dessus)</string>
    <string name="create_a_public_chat">Créer un chat public</string>
    <string name="join_a_public_chat">joindre un chat public</string>
    <string name="you_can_create_a_public_chat_or_join_one_from_the_list_on_the_right">Vous pouvez créer un chat public ou rejoindre un de la liste de droite.</string>
    <string name="create">Créer</string>
    <string name="reload">Rafraîchir</string>
    <string name="till_next_round">jusqu\'au prochain tour</string>
    <string name="players_in_game">JOUEURS DANS LA SALLE DE JEU</string>
    <string name="classicGame">Classique</string>
    <string name="coopGame">Coop</string>
    <string name="classicTheme">Classique</string>
    <string name="invertedTheme">Contraste</string>
    <string name="greenTheme">Vert</string>
    <string name="pinkTheme">Rose</string>
    <string name="password">Mot de passe</string>
    <string name="manage_chat_label">Gérer les chats</string>
    <string name="game_page_label">Jeu</string>
    <string name="game_list_label">Liste des salles</string>
    <string name="game_room_label">Salle d\'attente</string>
    <string name="friends_label">Gérer les amis</string>
    <string name="ranking">Classement</string>
    <string name="bracket_label">Tours du tournoi</string>
    <string name="waiting_for_tournament_label">En attente d\'un tournoi</string>
</resources>