<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:background="?backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    android:clipChildren="false"
    tools:context=".login.LoginFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:orientation="horizontal">
            <FrameLayout
                android:id="@+id/changeToFr"
                android:layout_width="60dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fr"
                    android:textStyle="bold"
                    android:textColor="?colorOnPrimary"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:background="@drawable/background_letter_rack"
                    android:backgroundTint="?logBackground">
                </TextView>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/changeToEn"
                android:layout_width="60dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/en"
                    android:textStyle="bold"
                    android:textColor="?colorOnPrimary"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:background="@drawable/background_letter_rack"
                    android:backgroundTint="?logBackground">
                </TextView>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="35dp"
            android:background="@drawable/background_direction_panel"
            android:backgroundTint="?logBackground"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shrikhand"
                android:text="@string/app_name"
                android:textSize="50dp"></TextView>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_username"
                android:hint="@string/prompt_username"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textColorHint="?colorOnPrimary"
                android:textColor="?colorOnPrimary"
                android:layout_gravity="center"
                android:padding="8dp"
                android:background="@drawable/background_direction_panel"
                android:backgroundTint="?editBackgroundColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="?colorOnPrimary"
                android:textColor="?colorOnPrimary"
                android:autofillHints="Password"
                android:hint="@string/password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:padding="8dp"
                android:background="@drawable/background_direction_panel"
                android:backgroundTint="?editBackgroundColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                style="@style/MaterialButtonStyle"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:textAllCaps="false"
                android:textColor="?colorOnPrimary"
                android:background="@drawable/background_direction_panel"

                android:text="@string/action_sign_in"
                />
            <TextView
                android:id="@+id/forgot_password_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/forgotPasswordText"
                android:textColor="?secondaryTextColor"
                android:textAlignment="center" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reset"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:textColor="?colorOnPrimary"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:background="@drawable/background_direction_panel"
                android:backgroundTint="?buttonColor"/>
            <TextView
                android:id="@+id/register_message"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="?secondaryTextColor"
                android:text="@string/registerText"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:textColor="?colorOnPrimary"
                android:textAllCaps="false"
                android:text="@string/register"
                android:background="@drawable/background_direction_panel"
                android:backgroundTint="?buttonColor"/>
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:visibility="gone"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="40dp"/>



</FrameLayout>
